--- a/p8105_hw_5_qy2234.Rmd
+++ b/p8105_hw_5_qy2234.Rmd
@@ -33,10 +33,11 @@ theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ## load in the given dataset and clean the names
 set.seed(10)
 
-iris_with_missing = iris %>% 
+iris_with_missing = 
+  iris %>% 
+  janitor::clean_names() %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
-  mutate(Species = as.character(Species)) %>% 
-  janitor::clean_names()
+  mutate(species = as.character(species))
 ```
 
 ```{r}
@@ -50,6 +51,7 @@ fill_missing = function(x) {
   }
   x
 }
+
 map(iris_with_missing, fill_missing) %>% 
   bind_cols()
 ```
@@ -57,7 +59,7 @@ map(iris_with_missing, fill_missing) %>%
 # Problem 2
 ```{r}
 ## import data, create a read file function, combine files
-file_names = list.files("./data")
+file_list = list.files("./data")
 
 read_file = function(x) {
   path = str_c("./data/",x)
@@ -65,14 +67,14 @@ read_file = function(x) {
 }
 
 combined_df = 
-  purrr::map(file_names,read_file) %>%
+  purrr::map(file_list,read_file) %>%
   bind_rows() %>% 
   janitor::clean_names() %>%
-  mutate(file_names = file_names) %>% 
-  separate(file_names, into = c("arm", "id"), sep = "_") %>% 
+  mutate(file_list = file_list) %>% 
+  separate(file_list, into = c("arm", "id"), sep = "_") %>% 
   mutate(arm = recode(arm, 
-                            "con" = "control", 
-                            "exp" = "experimental")) %>%
+                      "con" = "control", 
+                      "exp" = "experimental")) %>%
   mutate(id = str_remove(id,".csv")) %>% 
   select(id, arm, everything())
 
@@ -88,19 +90,20 @@ combined_df %>%
                values_to = "readings") %>% 
   ggplot(aes(x = week, y = readings, color = id, group = id)) +
   geom_line() +
-  geom_point(aes(shape = arm), alpha = .5) +
+  geom_point(aes(shape = arm)) +
   facet_grid(.~arm) +
   labs(title = "Spaghetti plots based on arm",
        x = "Week",
        y = "Readings")
 ```
 
-* Based on the spaghetti plots made, we can see that there is not really an increase or a decrease for the control group. The observations for individuals fluctuate a lot but basiclly stay the same across the period of the experiment. There is not a significant enough trend. On the other hand, for the experimental group, although individual data still fluatuates a lot, there is a obvious increasing trend as the experiment proceed. In general, we see a higher average reading for the individuals in the experimental group compared to the ones from the control group.
+* Based on the spaghetti plots made, we can see that there is not really an increase or a decrease for the control group. The observations for individuals fluctuate a lot but basiclly stay the same across the period of the experiment. There is not a significant enough trend. On the other hand, for the experimental group, although individual data still fluatuates a lot, there is a obvious increasing trend as the experiment proceed. In general, we see a higher average reading for the individuals in the experimental group compared to the ones in the control group.
 
 # Problem 3
 ```{r}
-## create a function that does simple linear regression(get the estimate and p-value)
+## create a function that does simple linear regression (get the estimate and p-value)
 set.seed(10)
+
 sim_line_regression = function(n = 30, beta0 = 2, beta1 = 0) {
   
   sim_data = tibble(
@@ -129,10 +132,10 @@ generate_10000_list
 ```
 
 ```{r}
-## try using beta1 = {1,2,3,4,5,6}
+## try again using beta1 = {1,2,3,4,5,6}
 set.seed(10)
 
-different_beta1_lists = 
+different_beta1_10000_lists = 
   tibble(beta1 = c(1, 2, 3, 4, 5, 6)) %>% 
   mutate(
     output_lists = map(beta1, ~rerun(10000, sim_line_regression(beta1 = .x)))) %>%
@@ -140,4 +143,52 @@ different_beta1_lists =
   unnest()
 ```
 
+```{r}
+## make a plot showing the power of the test 
+different_beta1_10000_lists %>% 
+  group_by(beta1) %>%
+  summarize(
+    n = n(),
+    power = sum(p_value < 0.05)/n) %>% 
+  ggplot(aes(x = beta1, y = power)) +
+  geom_smooth() +
+  geom_point() +
+    labs(title = "Association between effect size and power", 
+         x = "True value of beta2", 
+         y = "Power of the test")
+```
 
+* Based on the plot we made, we see a positive linear relationship between the true value of beta2 and the power of the test, in other words, as the true beta2 increases, the power of the test also increases.
+
+
+```{r}
+## comparing estimate of beta1 hat with the true value of beta1
+population_average = 
+different_beta1_10000_lists %>% 
+  group_by(beta1) %>% 
+  summarize(average_estimate_beta_1_pop = mean(beta1_hat)) 
+ 
+sample_average = 
+different_beta1_10000_lists %>% 
+  filter(p_value < 0.05) %>% 
+  group_by(beta1) %>% 
+  summarize(average_estimate_beta_1_sam = mean(beta1_hat)) 
+
+ggplot() + 
+  geom_point(aes(x = beta1, y = average_estimate_beta_1_pop, color = "green"), 
+             data = population_average) +
+  geom_smooth(aes(x = beta1, y = average_estimate_beta_1_pop, color = "green"), 
+              data = population_average) +
+  geom_point(aes(x = beta1, y = average_estimate_beta_1_sam, color = "red"), 
+             data = sample_average) +
+  geom_smooth(aes(x = beta1, y = average_estimate_beta_1_sam, color = "red"), 
+              data = sample_average) +
+  scale_color_identity(breaks = c("green", "red"),
+                       labels = c("True values", "Sample values"),
+                       guide = "legend") +
+  labs(title = "Comparing the estimate of beta1 hat with the true value of beta1", 
+       x = "True value of beta1",
+       y = "Average estimate of beta1 hat")
+```
+
+*The sample average of beta1 hat across tests for which the null is rejected is not approximately equal to the true value of beta1. The difference is larger when the true value of beta1 is small and smaller as the true value of beta1 gets larger.
