--- a/p8105_hw_5_qy2234.md
+++ b/p8105_hw_5_qy2234.md
@@ -3,8 +3,6 @@ p8105\_hw5\_qy2234
 Michael Yan
 11/5/2019
 
-# General setup
-
 # Problem 1
 
 ``` r
@@ -18,6 +16,7 @@ iris_with_missing = iris %>%
 ```
 
 ``` r
+## create a funciton that fill in the missing values 
 fill_missing = function(x) {
   if (is.numeric(x)) {
      x = replace_na(x, round(mean(x, na.rm = TRUE),1))
@@ -344,4 +343,129 @@ combined_df %>%
     although individual data still fluatuates a lot, there is a obvious
     increasing trend as the experiment proceed. In general, we see a
     higher average reading for the individuals in the experimental group
-    compared to the ones from the control group.
+    compared to the ones from the control
+group.
+
+# Problem 3
+
+``` r
+## create a function that does simple linear regression(get the estimate and p-value)
+set.seed(10)
+sim_line_regression = function(n = 30, beta0 = 2, beta1 = 0) {
+  
+  sim_data = tibble(
+    x = rnorm(n, mean = 0, sd = 1),
+    y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50))
+  )
+  
+  ls_fit = lm(y ~ x, data = sim_data) %>% 
+    broom::tidy()
+  tibble(
+    beta1_hat = ls_fit[[2,2]],
+    p_value = ls_fit[[2,5]]
+  )
+}
+```
+
+``` r
+## generate 10000 datasets from the model created
+set.seed(10)
+
+generate_10000_list =
+  rerun(10000, sim_line_regression(beta1 = 0)) %>%
+  bind_rows()
+
+generate_10000_list
+```
+
+    ## # A tibble: 10,000 x 2
+    ##    beta1_hat p_value
+    ##        <dbl>   <dbl>
+    ##  1    -2.44   0.0895
+    ##  2    -0.366  0.769 
+    ##  3     2.10   0.0917
+    ##  4    -0.963  0.431 
+    ##  5     1.61   0.192 
+    ##  6     0.213  0.880 
+    ##  7    -1.99   0.219 
+    ##  8     2.15   0.252 
+    ##  9     0.421  0.773 
+    ## 10     0.685  0.532 
+    ## # … with 9,990 more rows
+
+``` r
+## try using beta1 = {1,2,3,4,5,6}
+set.seed(10)
+
+different_beta1_lists = 
+  tibble(beta1 = c(1, 2, 3, 4, 5, 6)) %>% 
+  mutate(
+    output_lists = map(beta1, ~rerun(10000, sim_line_regression(beta1 = .x)))) %>%
+  unnest(output_lists) %>% 
+  unnest()
+```
+
+``` r
+## make a plot showing the power of the test 
+different_beta1_lists %>% 
+  group_by(beta1) %>%
+  summarize(
+    n = n(),
+    power = sum(p_value < 0.05)/n) %>% 
+  ggplot(aes(x = beta1, y = power)) +
+  geom_smooth() +
+  geom_point() +
+    labs(title = "Association between effect size and power", 
+         x = "True value of beta 2", 
+         y = "power of the test")
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+
+<img src="p8105_hw_5_qy2234_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+
+  - Based on the plot we made, we see a linear relation between the true
+    value of beta 2 and power of the test, in other words, as the true
+    beta 2 increases, the power of the test also increases.
+
+<!-- end list -->
+
+``` r
+## comparing estimate of beta 1 hat with the true value of beta 1
+population_average = 
+different_beta1_lists %>% 
+  group_by(beta1) %>% 
+  summarize(average_estimate_beta_1_pop = mean(beta1_hat)) 
+ 
+sample_average = 
+different_beta1_lists %>% 
+  filter(p_value < 0.05) %>% 
+  group_by(beta1) %>% 
+  summarize(average_estimate_beta_1_sam = mean(beta1_hat)) 
+
+ggplot() + 
+  geom_point(aes(x = beta1, y = average_estimate_beta_1_pop, color = "green"), 
+             data = population_average, size = 4, alpha = .4) +
+  geom_smooth(aes(x = beta1, y = average_estimate_beta_1_pop, color = "green"), 
+              data = population_average, alpha = .5) +
+  geom_point(aes(x = beta1, y = average_estimate_beta_1_sam, color = "red"), 
+             data = sample_average, size = 4, alpha = .4) +
+  geom_smooth(aes(x = beta1, y = average_estimate_beta_1_sam, color = "red"), 
+              data = sample_average, alpha = .5) +
+  scale_color_identity(breaks = c("green", "red"),
+                       labels = c("True values", "Sample values"),
+                       guide = "legend") +
+  labs(title = "Comparing the estimate of beta 1 hat with the true value of beta 1", 
+       x = "True value of beta 1",
+       y = "Average estimate of Beta 1 hat")
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+
+<img src="p8105_hw_5_qy2234_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+\*The sample average of beta 1 hat across tests for which the null is
+rejected is not approximately equal to the true value of beta one. The
+difference is larger when the true value of beta 1 is small and smaller
+as the true value of beta 1 gets larger
